Don't return entities.
