# grassroots-backend/src/contacts/Contacts.controller.ts
@@ -2,6 +2,7 @@ import { Controller, Get, Post, Body, Param } from "@nestjs/common";
 import { ContactsService } from "./Contacts.service";
 import { ContactEntity } from "./entities/Contact.entity";
 import {
+  ContactResponseDTO,
   CreateBulkContactRequestDto,
   CreateBulkContactResponseDTO,
   CreateContactRequestDto,
@@ -29,7 +30,7 @@ export class ContactsController {
   }
 
   @Get()
-  findAll(): Promise<ContactEntity[]> {
+  findAll(): Promise<ContactResponseDTO[]> {
     return this.contactsService.findAll();
   }
 
